- updated: controller.validate()
- updated: controller.close([end])
- updated: controller.content(name, [contentType/return content], [headers])
- updated: utils.validate()
- updated: utils.httpStatus()
- updated: nosql (extended buffer)
- updated: req.hostname()
- updated: binary

- fixed: subdomain routing [www is automatically removed]
- fixed: controller.database()
- fixed: mail.send()
- fixed: json flag
- fixed: framework.clear(), request.clear()
- fixed: FrameworkMarkdown - parsing of title
- fixed: templates (throwing of exception by the illegal tags)

- improvements: saving of memory
- improvements: utils.js

- documentation (add) HttpFile
- documentation (upd) Configuration
- documentation (upd) How do "views" work?
- documentation (upd) How does authorization work?
- documentation (upd) FrameworkController
- documentation (upd) FrameworkFileSystem
- documentation (upd) FrameworkViews
- documentation (upd) FrameworkController
- documentation (upd) Request.prototype

- example (add): https://github.com/petersirka/partial.js/tree/master/examples/workers
- example (add): https://github.com/petersirka/partial.js/tree/master/examples/mysql
- example (add): https://github.com/petersirka/partial.js/tree/master/examples/postgresql
- example (add): https://github.com/petersirka/partial.js/tree/master/examples/angularjs
- example (upd): https://github.com/petersirka/partial.js/tree/master/examples/routing
- example (upd): https://github.com/petersirka/partial.js/tree/master/examples/routing-subdomain
- example (upd): https://github.com/petersirka/partial.js/tree/master/examples/static-version
- example (upd): https://github.com/petersirka/partial.js/tree/master/examples/framework-schema
- example (upd): https://github.com/petersirka/partial.js/tree/master/examples/validation
- example (upd): https://github.com/petersirka/partial.js/tree/master/examples/mongodb-mongolab


======= 1.2.9

- updated: utils.getContentType()